# CppResearch

./: CMakeLists.txt
Assets/: P3.ppm  earthmap.ppm  metal.ppm  soccer.ppm  square.ppm  white.ppm
rgs/: Application.cpp  Application.h  Main.cpp
rgs/Base/: Base.h  BaseShader.h  Maths.cpp  Maths.h
rgs/Renderer/: Renderer.h
rgs/Scene/: MeshObject.cpp  MeshObject.h  Scene.h  SceneObject.h
rgs/Shader/: BaseShader.h  BlinnShader.cpp  BlinnShader.h
rgs/Texture/: Texture.cpp
rgs/Window/: Framebuffer.cpp  Framebuffer.h  InputCode.h  Render.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h  Window.cpp  Window.h  WindowsWindow.cpp  WindowsWindow.h
